bindings/lisp/fae/map.lisp

(in-package :cl-user)
(define-foreign-type map-type () () (:actual-type :pointer))
(define-parse-method map () (make-instance 'map-type))
(defclass map () ((map-ptr :initarg :map-ptr)))
(defmethod translate-to-foreign (x (type map-type)) (slot-value x 'map-ptr))
(defmethod translate-from-foreign (x (type map-type)) (make-instance 'map :map-ptr x))
(defctype map-key ptr)
(defcfun (map-empty "fae_map_empty") map)
(defcfun (map-copy "fae_map_copy") map (a map))
(defcfun (map-destroy "fae_map_destroy") :void (a map))
(defcfun (map-size "fae_map_size") :int (a map))
(defcfun (map-is-empty "fae_map_is_empty") :boolean (a map))
(defcfun (map-is-single "fae_map_is_single") :boolean (a map))
(defcfun (map-add "fae_map_add") map (a map-key) (b ptr) (c map))
(defcfun (map-set "fae_map_set") map (a map-key) (b ptr) (c map))
(defcfun (map-remove "fae_map_remove") map (a map-key) (b map))
(defcfun (map-dadd "fae_map_dadd") map (a map-key) (b ptr) (c map))
(defcfun (map-dset "fae_map_dset") map (a map-key) (b ptr) (c map))
(defcfun (map-dremove "fae_map_dremove") map (a map-key) (b map))
(defcfun (map-add-entry "fae_map_add_entry") map (a pair) (b map))
(defcfun (map-set-entry "fae_map_set_entry") map (a pair) (b map))
(defcfun (map-remove-entry "fae_map_remove_entry") map (a pair) (b map))
(defcfun (map-get "fae_map_get") ptr (a map-key) (b map))
(defcfun (map-has-key "fae_map_has_key") :boolean (a map-key) (b map))
(defcfun (map-has-elem "fae_map_has_elem") :boolean (a ptr) (b map))
(defcfun (map-has-entry "fae_map_has_entry") :boolean (a pair) (b map))
(defcfun (map-is-submap-of "fae_map_is_submap_of") :boolean (a map) (b map))
(defcfun (map-is-proper-submap-of "fae_map_is_proper_submap_of") :boolean (a map) (b map))
(defcfun (map-sum "fae_map_sum") map (a map) (b map))
(defcfun (map-product "fae_map_product") map (a map) (b map))
(defcfun (map-difference "fae_map_difference") map (a map) (b map))
(defcfun (map-power "fae_map_power") map (a map))
(defcfun (map-map "fae_map_map") map (a unary) (b ptr) (c map))
(defcfun (map-from-pair "fae_map_from_pair") map (a pair))
(defcfun (map-from-list "fae_map_from_list") map (a list))
(defcfun (map-to-list "fae_map_to_list") list (a map))